구구단 완료

--- a/webwork/day0901/ex2_간단한스타일.html
+++ b/webwork/day0901/ex2_간단한스타일.html
@@ -43,7 +43,7 @@
     <h1 style="color: rgb(150,190,46);background-color: (100,234,200,0.7);font-family: 'Permanent Marker'">Have a Good Day!!</h1>
     <span class="one">Java</span>
     <span class="two">HTML</span>
-    <span class="three">JavaScript</spann>
+    <span class="three">JavaScript</span>
     <hr>
     <div class="one">소나타</div>
     <div class="two">그랜저</div>
