9월 5일 마무리 자바쪽 더 보기

--- a/webwork/day0905/ex4_사진변경(답).html
+++ b/webwork/day0905/ex4_사진변경(답).html
@@ -10,7 +10,7 @@
             margin-bottom: 20px;
         }
 
-        div.buttons buttons {
+        div.buttons button {
             width: 80px;
             height: 40px;
         }
