--- a/webwork/day0907/ex5_lotto(resolve).html
+++ b/webwork/day0907/ex5_lotto(resolve).html
@@ -92,6 +92,8 @@
                 }
             }
             // alert(lotto_array);
+            // div.lotto출력
+            //div. lotto 출력
            
             let div_lotto=document.querySelectorAll("div.lotto");
             for(let i=0; i<div_lotto.length; i++){
