--- a/javawork/ProjectJavascript/src/main/webapp/day1006/ex9_jsonR.html
+++ b/javawork/ProjectJavascript/src/main/webapp/day1006/ex9_jsonR.html
@@ -10,6 +10,7 @@
 	body * {
 		font-family: 'Jua'
 	}
+	
 </style>
 <script>
 $(function(){
@@ -26,9 +27,27 @@ $(function(){
 	
 	{
 		part : "food",
-		data : ["../food/11.png","../food/5.png","../food/3.png"]
+		data : ["../food/8.jpg","../food/5.jpg","../food/3.jpg"]
 	}
 	];
+	
+	let s = `<table class = "table table-bordered" style= "width: 700px;">`;
+
+	
+	$.each(arr, function(index, item) {
+		s += "<tr>";
+		s += `<td width = "150"><b style = "font-size:2em">${item.part}</b></td>`;
+		s += "<td>";	
+		// tiem.data는 배열이므로 반복문으로 출력
+		$.each(item.data, function(index2, photo) {
+			s += `<img src = "${photo}" width = 100 height = 100 border = 1 hspace = 5>`;
+		});
+		s += "</td>";
+		s += "</tr>";
+	});
+	
+	s += "</table>";
+	$("div.show").html(s);
 });
 </script>
 </head>
