--- a/javawork/ProjectJavascript/src/main/webapp/day1012/ex1_wallChange.html
+++ b/javawork/ProjectJavascript/src/main/webapp/day1012/ex1_wallChange.html
@@ -17,7 +17,7 @@
 	// 벽지 이미지 클릭시 이벤트, 공백 시 굳이 li안써도 됨
 	$("ul.list img").click(function(){
 		// 1. 현재 클릭한 이미지의 부모태그인 li에 active 클래스 추가
-		$(this).parent().addClass("active")
+		$(this).parent().addClass("active");
 		// 2. 그 이전에 추가 된 active는 제거(siblings 이용)
 		$(this).parent().siblings().removeClass("active");
 		// 3. 클릭한 이미지의 title 얻기
