--- a/webwork/day1010/numberThreeExam.html
+++ b/webwork/day1010/numberThreeExam.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        function numberThreeExam(common) {
+        function solution(common) {
         let answer = 0;
 
         // 등차수열 0번째 인덱스와 마지막 인덱스의 값이 중간값에 *2를 한다.
@@ -21,9 +21,9 @@
         console.log(answer);
         return answer;
         }
-        const common = [2, 4, 6];
-        const result = numberThreeExam(common);
-        console.log(result)
+       
+        const result = solution(common);
+        console.log(result);
     </script>
 </body>
 </html>
