--- a/webwork/imageType/image.html
+++ b/webwork/imageType/image.html
@@ -6,18 +6,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>이미지 유형01</title>
   <style>
-    /* fonts*/
+    /* fonts */
     @import url('https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css');
 
     .nexon {
       font-family: 'NexonLv1Gothic';
-      font-weight: 500px;
+      font-weight: 400;
     }
 
+    /* unsplash.com 으로 이미지를 다운받을 수 있다. */
     /* reset */
     * {
       margin: 0;
       padding: 0;
+    }
+    a{
+      text-decoration: none;
+      color: #000;
+    }
+
+    h1,h2,h3,h4,h5,h6 {
+      font-weight: normal;
     }
 
     /* common */
@@ -27,27 +36,92 @@
       margin: 0 auto;
     }
 
+    .section {
+      padding: 120px 0;
+    }
+
+    .section > h2 {
+      font-size: 50px;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+
+    .section > p {
+      font-size: 22px;
+      font-weight: 300;
+      margin-bottom: 70px;
+      text-align: center;
+      color: #777;
+    }
+
     /* imageType */
-    #imageType {
-      background: #ccc;
-      height: 500px;
+    .image__inner {
+      display: flex;
+      justify-content: space-between;
 
     }
 
-    .image__wrap {}
+    .image {
+      width: 49%;
+      height: 370px;
+      padding: 200px 30px 30px 30px;
+      box-sizing: border-box;
+      color: #fff;
+    }
+    .image.img1 {
+      background: url(/imageType/img/image_bg01.jpg) no-repeat center / cover; 
+    }
+    .image.img2 {
+      background: url(/imageType/img/image_bg02.jpg) no-repeat center / cover; 
+    }
+    .image__title {
+      font-size: 32px;
+      margin-bottom: 10px;
+    }
 
-    .image__inner {}
+    .image__desc {
+      font-size: 16px;
+      margin-bottom: 10px;
+      line-height: 1.4;
+      font-weight: 300;
+      padding-right: 100px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;
+      margin-bottom: 10px;
+    }
+
+    .image__btn {
+      font-size: 16px;
+      font-weight: 300;
+      color: #fff;
+      background-color: #B45A30;
+      padding: 10px 20px;
+      display: inline-block;
+    }
+    .image__btn.yellow {
+      background-color: #B59140;
+    }
   </style>
 </head>
 
 <body>
-  <section id="imageType" class="image__wrap">
+  <section id="imageType" class="image__wrap nexon section">
     <h2>포트폴리오가 실력이다.</h2>
-    <p>이미지 유형입니다. 확인 부탁드립니다.</p>
+    <p>이미지 유형입니다. 마우스 오버시 자세한 정보가 나와는 구조입니다.</p>
     <div class="image__inner container">
-      <div class="image">image1</div>
-      <div class="image">image2</div>
-    </div>
+      <article class="image img1">
+        <h3 class="image__title">강아지계의 연예인</h3>
+        <p class="image__desc">최근 연예인들 사이에서 키우는 강아지로 유명해진 비숑프리제는 생김새가 아주 작은 바빗과 흡사하여 바비숑...</p>
+        <a class="image__btn" href="/">자세히 보기</a>
+      </article>
+      <article class="image img2">
+        <h3 class="image__title">강아지계의 마스코트</h3>
+        <p class="image__desc">최근 연예인들 사이에서 키우는 강아지로 유명해진 비숑프리제는 ..생김새가 아주 작은 바빗과 흡사하여 바비숑...</p>
+        <a class="image__btn yellow" href="/">자세히 보기</a>
+      </article>
   </section>
 </body>
 
