[style] 조건문 작성 중

--- a/webwork/imageType/image.html
+++ b/webwork/imageType/image.html
@@ -58,7 +58,8 @@
     .image__inner {
       display: flex;
       justify-content: space-between;
-
+      
+      /* 가로로 눕힐 수 있으니 참고하기 flex-direction: ; */
     }
 
     .image {
