--- a/webwork/textType/text.html
+++ b/webwork/textType/text.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>텍스트 유형01</title>
 </head>
@@ -12,6 +13,21 @@
     padding: 0;
     margin: 0;
   }
+
+  a {
+    text-decoration: none;
+    color: #000;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-weight: normal;
+  }
+
   /* fonts */
   @import url('https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css');
 
@@ -19,46 +35,159 @@
     font-family: 'NexonLv1Gothic';
     font-weight: 400;
   }
-  .text__inner {
 
+  /* common */
+  .container {
+    width: 1160px;
+    padding: 0 20px;
+    margin: 0 auto;
+  }
+
+  .section {
+    padding: 120px 0;
+  }
+
+  .section h2 {
+    font-size: 50px;
+    text-align: center;
+    margin-bottom: 70px;
+  }
+
+  .section span {
+    display: block;
+    text-align: center;
+    font-size: 16px;
+    text-decoration: underline;
+    margin-bottom: 14px;
+  }
+
+  /* textType */
+  .text__inner {
+    display: flex;
+    /* flex-wrap chatgpt 확인해보기*/
+    flex-wrap: wrap;
+    /*간격 정리하기*/
+    justify-content: space-between;
+  }
+
+  .text {
+    width: 32%;
+    margin-bottom: 2%;
+    padding: 20px;
+    /* chatgpt 확인 */
+    box-sizing: border-box;
+    border-radius: 10px;
+    transition: background 0.3s;
+  }
+
+  .text:hover {
+    background: #f5f5f5;
+  }
+
+  .text__title {
+    font-size: 24px;
+    line-height: 1;
+    margin-bottom: 10px;
+    /* 한줄효과 */
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding-top: 75px;
+    position: relative;
+  }
+
+  .text__title::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 60px;
+    height: 60px;
+    background: url(img/text_icon.svg);
+  }
+
+  .text.t1 .text__title::before {
+    background-position: 0 0;
+  }
+
+  .text.t2 .text__title::before {
+    background-position: -60px 0;
+  }
+
+  .text.t3 .text__title::before {
+    background-position: -120px 0;
+  }
+
+  .text.t4 .text__title::before {
+    background-position: -180px 0;
+  }
+
+  .text.t5 .text__title::before {
+    background-position: -240px 0;
+  }
+
+  .text.t6 .text__title::before {
+    background-position: -300px 0;
+  }
+
+  .text__desc {
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 1.4;
+    margin-bottom: 20px;
+    /* 세줄효과 */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    color: #666;
+  }
+
+  .text__btn {
+    font-size: 16px;
+    line-height: 1;
+    text-decoration: underline;
+    text-underline-position: under;
+    /* border-bottom: 1px solid #000; */
+    color: #666;
   }
 </style>
 
 <body>
-  <section id="textType" class="text__wrap">
+  <section id="textType" class="text__wrap nexon section">
     <span>텍스트 유형01</span>
     <h2>스크립트를 공부하는 방법</h2>
-    <div class="text__inner">
-      <div class="text">
-        <h3>검색 이펙트</h3>
-        <p>자바 스크립트의 기본 메서드를 통해 검색 스크립트를 완성하는 과정입니다. 메서드를 통해 쉽게 검색을 만들 수 있습니다....</p>
-        <a href="/">더보기</a>
+    <div class="text__inner container">
+      <div class="text t1">
+        <h3 class="text__title">검색 이펙트</h3>
+        <p class="text__desc">자바 스크립트의 기본 메서드를 통해 검색 스크립트를 완성하는 과정입니다. 메서드를 통해 쉽게 검색을 만들 수 있습니다....</p>
+        <a href="/" class="text__btn">더보기</a>
       </div>
-      <div class="text">
-        <h3>퀴즈 이펙트</h3>
-        <p>주관식 및 객관식 퀴즈를 통해 데이터를 주고 받는 방법에 대해서 익히는 과정입니다....</p>
-        <a href="/">더보기</a>
+      <div class="text t2">
+        <h3 class="text__title">퀴즈 이펙트</h3>
+        <p class="text__desc">주관식 및 객관식 퀴즈를 통해 데이터를 주고 받는 방법에 대해서 익히는 과정입니다....</p>
+        <a class="text__btn" href="/">더보기</a>
       </div>
-      <div class="text">
-        <h3>마우스 이펙트</h3>
-        <p>마우스를 통해 요소를 움직이고 효과를 주는 스크립트 과정입니다. 다양한 효과를 통해 자바 스크립트를 익힐 수 있습니다..</p>
-        <a href="/">더보기</a>
+      <div class="text t3">
+        <h3 class="text__title">마우스 이펙트</h3>
+        <p class="text__desc">마우스를 통해 요소를 움직이고 효과를 주는 스크립트 과정입니다. 다양한 효과를 통해 자바 스크립트를 익힐 수 있습니다..</p>
+        <a class="text__btn" href="/">더보기</a>
       </div>
-      <div class="text">
-        <h3>슬라이드 이펙트</h3>
-        <p>플러그인을 사용하지 않고 이미지 슬라이드를 표현하는 방법에 대해서 체계적으로 배우는 자바 스크립트입니다...</p>
-        <a href="/">더보기</a>
+      <div class="text t4">
+        <h3 class="text__title">슬라이드 이펙트</h3>
+        <p class="text__desc">플러그인을 사용하지 않고 이미지 슬라이드를 표현하는 방법에 대해서 체계적으로 배우는 자바 스크립트입니다...</p>
+        <a class="text__btn" href="/">더보기</a>
       </div>
-      <div class="text">
-        <h3>패렐랙스 이펙트</h3>
-        <p>자바 스크립트의 기본 메서드를 통해 검색 스크립트를 완성하는 과정입니다. 메서드를 통해 쉽게 검색을 만들 수 있습니다....</p>
-        <a href="/">더보기</a>
+      <div class="text t5">
+        <h3 class="text__title">패렐랙스 이펙트</h3>
+        <p class="text__desc">페렐랙스 스크로링 사이트에서 많이 사용되는 기법을 자바스크립트를 통해 익히는 과정입니다. 실무에서 가장 많이 쓰이는 스크립트이다.....</p>
+        <a class="text__btn" href="/">더보기</a>
       </div>
-      <div class="text">
-        <h3>게임 이펙트</h3>
-        <p>자바 스크립트의 기본 메서드를 통해 검색 스크립트를 완성하는 과정입니다. 메서드를 통해 쉽게 검색을 만들 수 있습니다....</p>
-        <a href="/">더보기</a>
-        
+      <div class="text t6">
+        <h3 class="text__title">게임 이펙트</h3>
+        <p class="text__desc">게임을 통해 자바스크립트를 익힙니다. 어려울 수 있지만 하다보면 재밌는 게임 만들기 스크립트 입니다....</p>
+        <a class="text__btn" href="/">더보기</a>
       </div>
     </div>
   </section>
