--- a/webwork/layoutType/layout05_02.html
+++ b/webwork/layoutType/layout05_02.html
@@ -34,13 +34,17 @@
       background: rgb(0, 0, 0, 0.1);
     }
     
-    .contents {}
+    .contents {
+      display: flex;
+      flex-wrap: wrap;
+    }
     .contents .cont1 {
+        width: 100%;
         height: 100px;
         background-color: #74574a;     
     }
     .contents .cont2 {
-        width: 50%;
+        width: 100%;
         height: 200px;
         background-color: #684d43;
     }
@@ -48,88 +52,25 @@
         width: 50%;
         height: 480px;
         background-color: #594139;
-        float: left;
+
     }
     .contents .cont4 {
-      width: 480px;
+      width: 50%;
+      height: 480px;
       background-color: #4a352f;
-      float: left;
-    }
 
-    /* clearfix */
-    .clearfix::before,
-    .clearfix::after {
-      content: '';
-      display: block;
-      line-height: 0;
-    }
-    .clearfix::after {
-      clear: both;
     }
 
 
     /* 미디어쿼리*/
     @media (max-width: 1220px) {
-      .container {
-        width: 96%;
-      }
-      .contents .cont1 {
-        width: 30%;
-        height: 780px;
-        float: left;
-      }
-      .contents .cont2 {
-        width: 70%;
-        height: 390px;
-        float: left;
-      }
-      .contents .cont3 {
-        width: 35%;
-        height: 390px;
-      }
-      .contents .cont4 {
-        width: 35%;
-        height: 390px;
-      }
+
     }
       @media (max-width: 768px) {
-      .container {
-        width: 100%;
-      }
-      .contents .cont1 {
-        width: 30%;
-        height: 780px;
-      }
-      .contents .cont2 {
-        width: 70%;
-        height: 260px;
-      }
-      .contents .cont3 {
-        width: 70%;
-        height: 260px;
-      }
-      .contents .cont4 {
-        width: 70%;
-        height: 260px;
-      }      
+ 
     }
       @media (max-width: 480px) {
-        .contents .cont1 {
-        width: 100%;
-        height: 150px;
-      }
-      .contents .cont2 {
-        width: 100%;
-        height: 210px;
-      }
-      .contents .cont3 {
-        width: 100%;
-        height: 210px;
-      }
-      .contents .cont4 {
-        width: 100%;
-        height: 210px;
-      }     
+   
     }
   </style>
 </head>
@@ -142,7 +83,7 @@
       <div class="container"></div>
     </div>
     <div id="main">
-      <div class="contents container clearfix">
+      <div class="contents container">
         <div class="cont1"></div>
         <div class="cont2"></div>
         <div class="cont3"></div>
